Feat: Change in HTML and CSS, add new images and logos for the project, three new section in main

--- a/index.html
+++ b/index.html
@@ -56,7 +56,55 @@
         </header>
         <main>
             <div class="hero-content">
-                <h1>Un equipo de programación con soluciones creativas</h1>
+                <article class="text-hero">
+                    <h1>Un equipo de programación con soluciones creativas</h1>
+                    <p>Aspiramos a que nuestros proyectos impacten positivamente la vida de millones de personas, convirtiendo a Barranquilla en un hub tecnológico que atraiga inversión, talento y oportunidades para las nuevas generaciones.</p>
+                </article>
+                <article>
+                    <div class="video-main">
+                        
+                    </div>
+                </article>
+                <article id="button-main">
+                    <div class="empresa-grid">
+                        <div class="empresa">
+                            <img src="https://www.svgrepo.com/show/303366/tesla-motors-logo.svg" alt="Tesla" width="40">
+                            <span>Tesla</span>
+                        </div>
+                        <div class="empresa">
+                            <img src="https://upload.wikimedia.org/wikipedia/commons/a/a6/Logo_NIKE.svg" alt="Nike">
+                            <span>Nike</span>
+                        </div>
+                        <div class="empresa">
+                            <img src="https://upload.wikimedia.org/wikipedia/commons/4/44/Microsoft_logo.svg" alt="Microsoft">
+                            <span>Microsoft</span>
+                        </div>
+                        <div class="empresa">
+                            <img src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/apple/apple-original.svg" alt="Apple">
+                            <span>Apple</span>
+                        </div>
+                        <div class="empresa">
+                            <img src="https://upload.wikimedia.org/wikipedia/commons/2/2f/Google_2015_logo.svg" alt="Google">
+                            <span>Google</span>
+                        </div>
+                        <div class="empresa">
+                            <img src="https://commons.wikimedia.org/wiki/Special:Redirect/file/Amazon_icon.svg" alt="Amazon" width="40">
+                            <span>Amazon</span>
+                        </div>
+                        <div class="empresa">
+                            <img src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/facebook/facebook-original.svg" alt="Facebook" width="40">
+                            <span>Facebook</span>
+                        </div>
+                        <div class="empresa">
+                            <img src="https://www.svgrepo.com/show/330669/ibm.svg" alt="IBM" width="40">
+                            <span>IBM</span>
+                        </div>
+                        <div class="empresa">
+                            <img src="https://upload.wikimedia.org/wikipedia/commons/0/08/Netflix_2015_logo.svg" alt="Netflix" width="40">
+                            <span>Netflix</span>
+                        </div>
+                    </div>
+                </article>
             </div>
         </main>
         <footer></footer>
