Feat: Chenge in HTML and CSS, new section with article

--- a/index.html
+++ b/index.html
@@ -60,13 +60,13 @@
                     <h1>Un equipo de programación con soluciones creativas</h1>
                     <p>Aspiramos a que nuestros proyectos impacten positivamente la vida de millones de personas, convirtiendo a Barranquilla en un hub tecnológico que atraiga inversión, talento y oportunidades para las nuevas generaciones.</p>
                 </article>
-                <article>
+                <article class="container-video-main">
                     <div class="video-main">
-                        
+                        <video src="./videos/VID_20250617_130926.mp4" autoplay muted loop></video>
                     </div>
                 </article>
                 <article id="button-main">
-                    <div class="empresa-grid">
+                    <div class="empresa-flex">
                         <div class="empresa">
                             <img src="https://www.svgrepo.com/show/303366/tesla-motors-logo.svg" alt="Tesla" width="40">
                             <span>Tesla</span>
@@ -103,7 +103,25 @@
                             <img src="https://upload.wikimedia.org/wikipedia/commons/0/08/Netflix_2015_logo.svg" alt="Netflix" width="40">
                             <span>Netflix</span>
                         </div>
+                        <div class="empresa">
+                            <img src="https://upload.wikimedia.org/wikipedia/commons/8/85/Intel_logo_2023.svg" alt="">
+                            <span>Intel</span>
+                        </div>
+                        <div class="empresa">
+                            <img src="https://upload.wikimedia.org/wikipedia/commons/2/24/Samsung_Logo.svg" alt="">
+                            <span>Samsung</span>
+                        </div>
                     </div>
+                </article>
+            </div>
+            <div class="about-us-main-container">
+                <article class="mision-cienaga">
+                    <h2>Mision</h2>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ratione similique, nostrum excepturi dicta doloribus repellendus? Vel corrupti itaque aut vitae!</p>
+                </article>
+                <article class="vision-cienaga">
+                    <h2>Vision</h2>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolorum reiciendis tempore dignissimos et atque illum. Illo, voluptas. Non, aut at!</p>
                 </article>
             </div>
         </main>
