--- a/index.html
+++ b/index.html
@@ -115,14 +115,59 @@
                 </article>
             </div>
             <div class="about-us-main-container">
-                <article class="mision-cienaga">
-                    <h2>Mision</h2>
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ratione similique, nostrum excepturi dicta doloribus repellendus? Vel corrupti itaque aut vitae!</p>
-                </article>
-                <article class="vision-cienaga">
-                    <h2>Vision</h2>
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolorum reiciendis tempore dignissimos et atque illum. Illo, voluptas. Non, aut at!</p>
-                </article>
+                <section id="title-about-me">
+                    <article>
+                        <h3>Vision, Mision y valores</h3>
+                        <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Maxime unde magnam ratione corporis culpa deleniti, voluptatem nostrum libero nisi minus.</p>
+                    </article>
+                </section>
+                <section class="mision-cienaga">
+                    <article>
+                        <h2>Mision</h2>
+                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ratione similique, nostrum excepturi dicta doloribus repellendus? Vel corrupti itaque aut vitae!</p>
+                    </article>
+                </section>
+                <section>
+                    <article><img src="" alt=""></article>
+                </section>
+                <section class="vision-cienaga">
+                    <article>
+                        <h2>Vision</h2>
+                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolorum reiciendis tempore dignissimos et atque illum. Illo, voluptas. Non, aut at!</p>
+                    </article>
+                </section>
+                <section id="values-about-me" class="value-flex">
+                    <div class="items">
+                        <article>
+                            <h3>Liderazgo</h3>
+                            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Corporis, sunt?</p>
+                        </article>
+                    </div>
+                    <div class="items">
+                        <article>
+                            <h3>Integridad</h3>
+                            <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Eum, delectus?</p>
+                        </article>
+                    </div>
+                    <div class="items">
+                        <article>
+                            <h3>Pasion</h3>
+                            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Optio, nihil.</p>
+                        </article>
+                    </div>
+                    <div class="items">
+                        <article>
+                            <h3>Colaboracion</h3>
+                            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sint, eveniet!</p>
+                        </article>
+                    </div>
+                    <div class="items">
+                        <article>
+                            <h3>Humanidad</h3>
+                            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptas, blanditiis.</p>
+                        </article>
+                    </div>
+                </section>
             </div>
         </main>
         <footer></footer>
