--- a/index.html
+++ b/index.html
@@ -123,6 +123,9 @@
                 </section>
                 <section class="mision-cienaga landing-about">
                     <article>
+                        <span class="material-symbols-outlined">
+                            visibility
+                        </span>
                         <h2>Mision</h2>
                         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ratione similique, nostrum excepturi dicta doloribus repellendus? Vel corrupti itaque aut vitae!</p>
                     </article>
@@ -134,6 +137,9 @@
                 </section>
                 <section class="vision-cienaga landing-about">
                     <article>
+                        <span class="material-symbols-outlined">
+                            flag
+                        </span>
                         <h2>Vision</h2>
                         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolorum reiciendis tempore dignissimos et atque illum. Illo, voluptas. Non, aut at!</p>
                     </article>
@@ -141,30 +147,45 @@
                 <section id="values-about-me" class="value-flex">
                     <div class="items">
                         <article>
+                            <span class="material-symbols-outlined">
+                                mountain_flag
+                            </span>
                             <h3>Liderazgo</h3>
                             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Corporis, sunt?</p>
                         </article>
                     </div>
                     <div class="items">
                         <article>
+                            <span class="material-symbols-outlined">
+                                diversity_3
+                            </span>
                             <h3>Integridad</h3>
                             <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Eum, delectus?</p>
                         </article>
                     </div>
                     <div class="items">
                         <article>
+                            <span class="material-symbols-outlined">
+                                shield_with_heart
+                            </span>
                             <h3>Pasion</h3>
                             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Optio, nihil.</p>
                         </article>
                     </div>
                     <div class="items">
                         <article>
+                            <span class="material-symbols-outlined">
+                                volunteer_activism
+                            </span>
                             <h3>Colaboracion</h3>
                             <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sint, eveniet!</p>
                         </article>
                     </div>
                     <div class="items">
                         <article>
+                            <span class="material-symbols-outlined">
+                                diversity_1
+                            </span>
                             <h3>Humanidad</h3>
                             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptas, blanditiis.</p>
                         </article>
