--- a/index.html
+++ b/index.html
@@ -95,6 +95,9 @@
                     <p>Aspiramos a que nuestros proyectos impacten positivamente la vida de millones de personas,
                         convirtiendo a Barranquilla en un hub tecnológico que atraiga inversión, talento y oportunidades
                         para las nuevas generaciones.</p>
+                    <div class="btn-agendar">
+                        <a href="https://calendar.google.com/calendar/render?action=TEMPLATE&text=Consulta+Clan+Cienaga&details=Consulta+con+clan+cienaga+para+la+fabricacion+de+software&location=En+l%C3%ADnea&dates=20250620T150000Z/20250620T160000Z" target="_blank"><button>Agenda tu cita</button></a>
+                    </div>
                 </article>
                 <article class="container-video-main">
                     <div class="video-main">
@@ -784,5 +787,4 @@
         </footer>
     </div>
 </body>
-
 </html>
